# AutosarExecutionManager

./: .codecov.yml  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
ara/com/: com.h
ara/com/ipc/inc/: Isocket.h  socket.h  ux_socket.h
ara/com/ipc/src/: socket.cpp  ux_socket.cpp
ara/core/: core.h  error_code.cpp  error_code.h  error_domain.cpp  error_domain.h  exception.cpp  exception.h  result.cpp  result.h
ara/exec/: deterministic_client.cpp  deterministic_client.h  exec_error_domain.cpp  exec_error_domain.h  execution_client.cpp  execution_client.h  state_client.cpp  state_client.h
ara/exec/parser/: manifest_parser.cpp  manifest_parser.h
em_draft/: CMakeLists.txt  README.md  appstate_server_fifo_create.sh
em_draft/application_state_client/: CMakeLists.txt
em_draft/application_state_client/inc/: application_state_client.hpp
em_draft/application_state_client/src/: application_state_client.cpp
em_draft/common/: common.h
em_draft/execution_manager/: CMakeLists.txt
em_draft/execution_manager/inc/: execution_manager.hpp
em_draft/execution_manager/src/: execution_manager.cpp
em_draft/execution_manager_executable/: CMakeLists.txt  main.cpp
em_draft/machine_state_management/: CMakeLists.txt
em_draft/machine_state_management/machine_state_client/: CMakeLists.txt
em_draft/machine_state_management/machine_state_client/inc/: machine_state_client.hpp
em_draft/machine_state_management/machine_state_client/src/: machine_state_client.cpp
em_draft/machine_state_management/machine_state_manager/: CMakeLists.txt
em_draft/machine_state_management/machine_state_manager/inc/: machine_state_manager.hpp
em_draft/machine_state_management/machine_state_manager/src/: machine_state_manager.cpp
em_draft/test_application_client/: CMakeLists.txt
em_draft/test_application_client/inc/: test_application_client.hpp
em_draft/test_application_client/src/: test_application_client.cpp
em_draft/test_application_executable/: CMakeLists.txt  main.cpp
src/: main.cpp
test/: manifest_parser_ut.cpp  socket_test.cpp  test_main.cpp  ux_socket_test.cpp
test/manifests/: execution_manifest_all_keys.json  execution_manifest_missing_machine_instance_refs_section.json  execution_manifest_missing_manifest_id.json  execution_manifest_missing_process_name.json  execution_manifest_missing_process_section.json  execution_manifest_missing_startup_configs_section.json  execution_manifest_missing_startup_options_section.json  machine_manifest_all_keys.json  machine_manifest_missing_function_group_name.json  machine_manifest_missing_manifest_id.json  machine_manifest_missing_mode.json  machine_manifest_missing_mode_declaration_group_section.json  machine_manifest_missing_mode_declaration_section.json
test/socket_mock/: socket_mock.h  ux_wraps.c
